--- a/index.html
+++ b/index.html
@@ -477,5 +477,7 @@
   })(document, 'script');
 </script>
    
+<iframe width="600" height="450" src="https://lookerstudio.google.com/embed/reporting/a89ffa38-c96e-47ba-b229-79e2b2e62965/page/6VkOF" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
+
 </body>
 </html>
