--- a/blank.html
+++ b/blank.html
@@ -15,7 +15,7 @@
 </head>
 <body>
      
-   <iframe width="100%" height="100%" src="https://lookerstudio.google.com/embed/reporting/a89ffa38-c96e-47ba-b229-79e2b2e62965/page/6VkOF" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>        
+   <iframe width="100%" height="800px" src="https://lookerstudio.google.com/embed/reporting/a89ffa38-c96e-47ba-b229-79e2b2e62965/page/6VkOF" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>        
           
    
    
